# taxutils

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
examples/: build_seqid2taxid.py  clean_headers.py  eg.fasta  eg.kreport  example.ipynb  extract_headers.py  filter_fasta.py  grep_fasta.py  label_enumeration.py  print_tree.py  quality_score.py  taxid_map.py  taxutils_example.ipynb  todo.txt  tpcf.py
src/: __init__.py  taxutils.py  utils.py
src/taxutils/: __init__.py  taxutils.py  utils.py
