[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxutils"
version = "1.0.0"
description = "Utilities for working with taxonomic data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "William O'Brien", email = "wob@cs.ucla.edu"},
]
maintainers = [
    {name = "William O'Brien", email = "wob@cs.ucla.edu"},
]
dependencies = [
    "numpy",
    "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["taxutils*"]
